Fix height of input, select and texarea fields
The size of elements may be specified in valuespecs and is then set
via the style attribute of the element in the Python code. In a
previous commit the size of elements was changed to a border-box.
Accoring to the CSS Box Sizing Module Level 3:

The content width and height are calculated by subtracting the
border and padding widths of the respective sides from the specified
<length-percentage>. As the content width and height cannot be
negative, this computation is floored at zero.

I.e. content that did not fit in the border-box was truncated.
This commit restores the old width of elements while it keeps the
new height intact.

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -690,14 +690,15 @@ textarea,
 div.snapin textarea,
 #mk_side_search_field,
 .tagify__input {
-  height: $input-field-height;
-  padding: 3px 6px;
+  $padding: 3px;
+
+  height: ($input-field-height - 2 * $padding);
+  padding: $padding 6px;
   color: $font-color;
   background-color: $inpage-highlight-color;
   background-image: none;
   border-radius: $theme-border-radius;
   box-shadow: none;
-  box-sizing: border-box;
 }
 
 span.select2 .select2-selection {
